--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>下のボタンからアプリをダウンロードしてください。</p>
 
-    <a href="itms-services://?action=download-manifest&url=https://github.com/Sizuha/test/download/manifest.plist" target="_blank">ダウンロード</a>
+    <a href="itms-services://?action=download-manifest&url=https://sizuha.github.io/test/download/manifest.plist" target="_blank">ダウンロード</a>
 
 </body>
 </html>
