--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 </head>
 
 <body>
+    <script type="text/javascript">
+        gtag('get', 'G-HKNY30T8D8', 'client_id', function(clientId) {
+            //Unity.call('ga_client_id=' + clientId);
+            console.log(clientId);
+        });
+    </script>
 
     <h1>高速記憶エンジンアプリ（テスト版）</h1>
 
