--- a/index.html
+++ b/index.html
@@ -5,27 +5,10 @@
     <title>ダウンロードページ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HKNY30T8D8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HKNY30T8D8');
-</script>
 </head>
 
 <body>
-    <script type="text/javascript">
-        gtag('get', 'G-HKNY30T8D8', 'client_id', function(clientId) {
-            console.log(clientId);
-            Unity.call('ga_client_id=' + clientId);
-        });
-    </script>
-
-    <h1>高速記憶エンジンアプリ（テスト版）</h1>
+    <h1>ダウンロードテスト</h1>
 
     <p>下のボタンからアプリをダウンロードしてください。</p>
 
